--- a/PushWP8Sample/PushWP8Sample/MainPage.xaml
+++ b/PushWP8Sample/PushWP8Sample/MainPage.xaml
@@ -1,4 +1,5 @@
 ﻿<phone:PhoneApplicationPage
+    x:Name="PageRoot"
     x:Class="PushWP8Sample.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -27,9 +28,23 @@
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-
-        </Grid>
+        <Border x:Name="ContentPanel"
+                Grid.Row="1"
+                Margin="12,0,12,12"
+                BorderBrush="White"
+                BorderThickness="2">
+            <phone:LongListSelector ItemsSource="{Binding Logs, ElementName=PageRoot}">
+                <phone:LongListSelector.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding }"
+                                   Margin="5,0"
+                                   HorizontalAlignment="Stretch"
+                                   TextWrapping="Wrap"
+                                   TextAlignment="Left"/>
+                    </DataTemplate>
+                </phone:LongListSelector.ItemTemplate>
+            </phone:LongListSelector>
+        </Border>
     </Grid>
 
 </phone:PhoneApplicationPage>
