@pivotal-domenic-curro/@pivotal-rszumlakowski - [#77633078] Set application icon to be the Pivotal logo. Fixed display name of application. Show a hint to users at startup.

--- a/PushWP8Sample/PushWP8Sample/MainPage.xaml
+++ b/PushWP8Sample/PushWP8Sample/MainPage.xaml
@@ -57,7 +57,7 @@
             <TextBox x:Name="OutputTextBox"
                         Margin="0,0,0,0"
                         TextWrapping="Wrap"
-                        Text="Successfully registered for push.&#xD;&#xA;Registering for push..."
+                        Text="Press 'Register' to try registering for push notifications."
                         IsReadOnly="true"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch" />
